[workspace]
members = [ 
    "src/cashier_backend",
    "src/cashier_backend_client",
    "src/cashier_backend_types",
    "src/integration_tests", 
    "src/lib/canister_settings",
    "src/lib/cashier_common",
    "src/lib/cashier_macros",
    "src/token_storage",
    "src/token_storage_client", 
    "src/token_storage_types",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
candid = "0.10"
cashier_backend_client = { path = "src/cashier_backend_client" }
cashier_backend_types = { path = "src/cashier_backend_types" }
cashier_common = { path = "src/lib/cashier_common" }
cashier_macros = { path = "src/lib/cashier_macros" }
futures = { version = "0.3", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
ic-icrc-tx = "0.1"
ic-stable-structures = "0.7"
ic_mple_client = "0.9"
ic_mple_log = { version = "0.9", features = ["service"] }
ic_mple_pocket_ic = "0.9"
ic_mple_utils = "0.9"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.10"
itertools = "0.14"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rand = { version = "0.8", features = ["getrandom"] }
rm = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
syn = "2.0"
thiserror = "2.0"
token_storage_client = { path = "src/token_storage_client" }
token_storage_types = { path = "src/token_storage_types" }
tokio = { version = "1", features = ["rt", "macros"] }
# Use fixed uuid version to avoid getrandom incompatibility. To be fixed.
uuid = { version = "=1.12.1", features = ["v4"] }
vergen-gitcl = { version = "1", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }


[profile.release]
lto = true
opt-level = 'z'
