[workspace]
members = [
    "src/cashier_backend",
    "src/cashier_backend_client",
    "src/cashier_backend_types",
    "src/gate_service",
    "src/gate_service_client",
    "src/gate_service_types",
    "src/integration_tests",
    "src/lib/cashier_common",
    "src/lib/cashier_macros",
    "src/lib/icrc_112_utils",
    "src/token_storage",
    "src/token_storage_client",
    "src/token_storage_types", 
    "src/transaction_manager",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
bitcoin = "0.32.8"
bitcoincore-rpc = "0.19.0"
candid = "0.10"
cashier_backend_client = { path = "src/cashier_backend_client" }
cashier_backend_types = { path = "src/cashier_backend_types" }
cashier_common = { path = "src/lib/cashier_common" }
cashier_macros = { path = "src/lib/cashier_macros" }
ciborium = "0.2"
derive_more = { version = "2", features = ["display"] }
futures = { version = "0.3", default-features = false }
getrandom = { version = "0.2", features = ["custom"] }
gate_service_client = { path = "src/gate_service_client" }
gate_service_types = { path = "src/gate_service_types" }
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.7"
ic_mple_auth = "0.16"
ic_mple_client = "0.16"
ic_mple_log = { version = "0.16", features = ["service"] }
ic_mple_pocket_ic = "0.16"
ic_mple_structures = "0.16"
ic_mple_utils = "0.16"
ic-ledger-types = "0.15.0"
icrc_112_utils = { path = "src/lib/icrc_112_utils" }
icrc-ledger-types = "0.1.10"
itertools = "0.14"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
rand = { version = "0.8", features = ["getrandom"] }
rm = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
syn = "2.0"
thiserror = "2.0"
token_storage_client = { path = "src/token_storage_client" }
token_storage_types = { path = "src/token_storage_types" }
tokio = { version = "1", features = ["rt", "macros"] }
transaction_manager = { path = "src/transaction_manager" }
# Use fixed uuid version to avoid getrandom incompatibility. To be fixed.
uuid = { version = "=1.12.1", features = ["v4"] }
vergen-gitcl = { version = "1", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }


[profile.release]
lto = true
opt-level = 'z'
