[package]
name = "cashier_backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-stable-structures = {workspace = true}
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = {workspace = true}
getrandom = {workspace = true, features = ["custom"]}
rand = {workspace = true, features = ["getrandom"]}
ic-cdk-timers = {workspace = true}
uuid = {workspace = true, features = ["v4"]}
serde_bytes = {workspace = true}
itertools = {workspace = true}
icrc-ledger-types = {workspace = true}
base64 = {workspace = true}
rm = {workspace = true}
ic-icrc-tx = {workspace = true}
cashier-types = { path = "../lib/cashier-types" }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }


[dev-dependencies]
tokio =  { workspace = true }

