[package]
name = "cashier_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true }
cashier-common = { workspace = true }
cashier-types = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-icrc-tx = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
rm = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }


[dev-dependencies]
tokio = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
