[package]
name = "cashier_backend"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
candid = { workspace = true }
cashier_backend_types = { workspace = true }
cashier_common = { workspace = true }
cashier_macros = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic_mple_auth = { workspace = true }
ic_mple_log = { workspace = true }
ic_mple_structures = { workspace = true }
ic-stable-structures = { workspace = true }
icrc_112_utils = { workspace = true }
icrc-ledger-types = { workspace = true }
intent_fee_calculator = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
rm = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
transaction_manager = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
