[package]
name = "cashier_backend_client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cashier-common = { workspace = true }
ic_mple_client = { workspace = true }
cashier-types = { workspace = true }
ic_mple_pocket_ic = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }