[package]
name = "cashier_backend_client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cashier-common = { workspace = true }
ic_mple_client = { workspace = true }
cashier-types = { workspace = true }
ic_mple_pocket_ic = { workspace = true, optional = true }
candid = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = []
pocket_ic = ["dep:ic_mple_pocket_ic", "dep:candid", "dep:serde"]