[package]
name = "gate_service_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
rand = { workspace = true, features = ["getrandom"] }
uuid = { workspace = true, features = ["v4"] }
gate_service_types = { workspace = true }
cashier_common = { workspace = true }
cashier_macros = { workspace = true }
ic-stable-structures = { workspace = true }
argon2 = "0.5.3"
tokio = { workspace = true }
async-trait = { workspace = true }
