[package]
name = "gate_service_types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
cashier_macros = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic_mple_log = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
