[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true
license.workspace = true


[dev-dependencies]
base64 = { workspace = true }
candid = { workspace = true }
cashier_backend_client = { workspace = true, features = ["pocket_ic"] }
cashier_backend_types = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
ic_mple_client = { workspace = true, features = ["pocket-ic"]}
ic_mple_log = { workspace = true }
ic_mple_pocket_ic = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
token_storage_client = { workspace = true }
token_storage_types = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }