[package]
name = "token_storage"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "../../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-stable-structures = {workspace = true}
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }
serde_json = {workspace = true}
cashier-macros = { path = "../lib/cashier-macros" }
serde_bytes = { workspace = true }
futures = "0.3.31"
