[package]
name = "token_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
cashier-common = { workspace = true }
cashier-macros = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
ic-cdk = { workspace = true }
ic_mple_log = { workspace = true }
ic-stable-structures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ic_mple_pocket_ic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
