[package]
name = "token_storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
cashier_common = { workspace = true }
cashier_macros = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic_mple_auth = { workspace = true }
ic_mple_client = { workspace = true }
ic_mple_log = { workspace = true }
ic_mple_utils = { workspace = true }
ic-stable-structures = { workspace = true }
icpswap_client = { workspace = true }
kongswap_client = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
token_storage_types = { workspace = true }

[dev-dependencies]
ic_mple_pocket_ic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
