[package]
name = "token_storage_types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
cashier_common = { workspace = true }
cashier_macros = { workspace = true }
ciborium = { workspace = true }
derive_more = { workspace = true }
ic_mple_log = { workspace = true }
ic_mple_structures = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
