[package]
name = "cashier-common"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
cashier-types = { workspace = true }
icrc-ledger-types  = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }