[package]
name = "cashier-essentials"
version = "0.1.0"
edition = "2021"
include = ['src', 'Cargo.toml']

[dependencies]
cashier-macros = { path = "../cashier-macros" }
cashier-types = { path = "../cashier-types" }
serde_json = {workspace = true}
ic-stable-structures = {workspace = true}
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }