[package]
name = "cashier-macros"
version = "0.1.0"
edition = "2021"
include = ['src', 'Cargo.toml']
license = "MIT"
license-file = "../../../LICENSE"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
ic-stable-structures = {workspace = true}