[package]
name = "cashier_common"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
rand = { workspace = true, features = ["getrandom"] }
sha2 = "0.10"
