[package]
name = "cashier_common"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
cashier_macros = { workspace = true }
ciborium = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
uuid = { workspace = true }
