[package]
name = "kongswap_client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
candid = { workspace = true }
ic_mple_client = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ic_mple_client = { workspace = true, features = ["ic-agent"] }
tokio = { workspace = true }
